Improve RPM installer